# basel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  basel.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml
basel/: __init__.py  client.py  components.py  config.py  dtos.py  exporters.py  icomponents.py  main.py  utils.py  views.py
basel/components/: __init__.py  classes.py  components.py  linkers.py  links.py  modules.py  nodes.py
basel/loaders/: __init__.py  loaders.py  modules.py
basel/parsers/: __init__.py  parser.py  python_parser.py
basel/reports/: __init__.py  as_plane.py  formats.py  reporter.py  reports.py
basel/views/: __init__.py  console.py  formats.py  views.py
changelog/v1/: v1.0.0.md  v1.1.1.md  v1.1.2.md
src/: client.py  components.py  dtos.py  icomponents.py  views.py
tests/components/: module_components_test.py
tests/integration_tests/clients/: basel_client_test.py
tests/integration_tests/components/: module_component_test.py  module_component_test_skip.py
tests/stubs/project_1/: module_1.py
tests/stubs/project_1/package_a/: module_a1.py
tests/stubs/stub_project/: module_1.py
tests/stubs/stub_project/package_a/: module_a1.py  module_a2.py
tests/stubs/stub_project_a/: module_1.py
tests/unit_tests/: utils_test.py
tests/unit_tests/components/: component_test.py  module_components_test.py
tests/unit_tests/loaders/: module_loader_test.py
tests/unit_tests/parsers/: python_parser_test.py
tests/unit_tests/reports/: reports_test.py
(+4 files in other folders)
