[tool.poetry]
name = "basel"
version = "0.1.0"
description = ""
authors = ["Iram Luis Morales Santos <iramluism@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
flake8 = "6.1.0"
black = "23.11.0"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
