[tool.poetry]
name = "basel"
version = "1.1.2"
description = "Report Architecture Data"
authors = ["Iram Luis Morales Santos <iramluism@gmail.com>", "Maura Elena Diaz Boente <mdboente@gmail.com>"]
readme = "README.md"
keywords = ["report"]

[project.urls]
Repository = "https://github.com/iramluism/basel.git"
Issues = "https://github.com/iramluism/basel/issues"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
plantuml = "^0.3.0"

[tool.poetry.scripts]
basel = "basel.main:main"


[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
flake8 = "6.1.0"
black = "23.11.0"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-github-report = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
